--- a/src/components/MainForm/MainForm.scss
+++ b/src/components/MainForm/MainForm.scss
@@ -1,10 +1,26 @@
 .main-form {
-    padding: 20px 0;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
 
-    &__network-form {
-        width: 300px;
+    & &__network-form {
+        width: 400px;
+        margin: 20px 0;
+    }
+
+    & &__address {
+        width: 400px;
+        margin: 20px 0;
+    }
+
+    & &__value {
+        width: 400px;
+        margin: 20px 0;
+    }
+
+    & &__button {
+        width: 250px;
+        height: 50px;
     }
 }
