feat: add tokens

--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -1,8 +1,8 @@
 .App {
-    margin-top: 72px;
+    margin: 70px 0;
 
     &__container {
         width: 100%;
-        color: black;;
+        color: black;
     }
 }
