feat: add button to send tokens

--- a/src/components/TransferForm/TransferForm.scss
+++ b/src/components/TransferForm/TransferForm.scss
@@ -18,5 +18,10 @@
         height: 50px;
         margin-bottom: 20px;
         font-size: 16px;
+
+        &--main-page {
+            margin-top: 40px;
+
+        }
     }
 }
