--- a/src/components/TransferForm/TransferForm.scss
+++ b/src/components/TransferForm/TransferForm.scss
@@ -3,6 +3,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    padding-bottom: 70px;
 
     &__title {
         font-size: 24px;
@@ -21,7 +22,10 @@
 
         &--main-page {
             margin-top: 40px;
-
         }
+    }
+
+    & &__hash {
+        padding-top: 10px;
     }
 }
