--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,18 +1,30 @@
 .header {
     position: fixed;
-    top: 10px;
     width: 100%;
     box-sizing: border-box;
     display: flex;
     align-items: center;
     justify-content: right;
-    padding: 0 16px;
+    padding: 0 16px 10px 16px;
     z-index: 1;
+    top: 0;
+    left: 0;
+    background: rgb(32, 32, 33);
+    mask-image: linear-gradient(to bottom, #000 calc(100% - 30px), transparent 100%);
 
-    &--address {
-        padding-left: 9px;
+    transition: mask-position 200ms, -webkit-mask-position 200ms;
+
+    &__logo {
+        position: absolute;
+        left: 40px;
+    }
+
+    &__address {
+        color: white;
+        padding-left: 4px;
 
         &-container {
+            margin-top: 10px;
             padding: 0 12px;
             display: flex;
             flex-direction: column;
@@ -23,11 +35,12 @@
     &__buttons {
         display: flex;
         flex-direction: column;
+        padding-right: 24px;
     }
 
     &__button {
         cursor: pointer;
-        margin: 10px 0;
+        margin: 8px 0;
         background: #FFD1B5;
         font-weight: bold;
         font-size: 14px;
