--- a/src/components/YoutubeEmbed/YoutubeEmbed.scss
+++ b/src/components/YoutubeEmbed/YoutubeEmbed.scss
@@ -1,4 +1,11 @@
 .video-responsive {
   margin: 0 auto;
   text-align: center;
+
+  @media screen and (max-width: 600px) {
+    iframe {
+      width: 340px;
+      height: 200px;
+    }
+  }
 }
