--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -1,13 +1,30 @@
+@import "src/ui-kit/styles/vars";
+
 .footer {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  right: 0;
   width: 100%;
 
-  height: 30px;
+  height: 78px;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 18px;
+  color: $gray2;
 
   &__made-by {
     text-align: center;
+
+    a {
+      color: white;
+      text-decoration: none !important;
+    }
+  }
+
+  &__social {
+    padding: 8px 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    a {
+      padding: 0 6px;
+    }
   }
 }
