--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,59 +1,95 @@
+@import "../../ui-kit/styles/vars";
+
 .header {
     position: fixed;
     width: 100%;
     box-sizing: border-box;
     display: flex;
     align-items: center;
-    justify-content: right;
-    padding: 0 16px 10px 16px;
+    justify-content: space-between;
+    height: 80px;
+    padding: 0 40px;
     z-index: 1;
     top: 0;
     left: 0;
-    background: rgb(32, 32, 33);
-    mask-image: linear-gradient(to bottom, #000 calc(100% - 30px), transparent 100%);
-    transition: mask-position 200ms, -webkit-mask-position 200ms;
 
     @media screen and (max-width: 600px) {
-        padding: 0 0 10px 0;
+        height: 68px;
+        padding: 0 16px;
+
+        &__logo {
+            height: 40px;
+            width: 40px;
+        }
+
+        #connect-button-metamask {
+            display: none;
+        }
+        #connect-button-wallet-connect {
+            display: flex !important;
+        }
     }
 
     &__logo {
-        position: absolute;
-        left: 40px;
-
-        @media screen and (max-width: 600px) {
-            left: 24px;
-        }
+        height: 48px;
+        width: 48px;
     }
 
     &__address {
+        cursor: pointer;
+        background: #313131;
+        border-radius: 40px;
+        font-weight: 700;
+        font-size: 12px;
+        line-height: 16px;
         color: white;
-        padding-left: 4px;
 
-        &-container {
-            margin-top: 10px;
-            padding: 0 12px;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-        }
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        margin-left: 20px;
+        width: 120px;
+        height: 40px;
     }
 
-    &__buttons {
+    &__navbar {
         display: flex;
-        flex-direction: column;
-        padding-right: 24px;
+        align-items: center;
+        justify-content: center;
     }
 
     &__button {
+        font-weight: 700;
+        font-size: 12px;
+        line-height: 16px;
+        color: #FFFFFF;
+        height: 40px;
+        width: 120px;
         cursor: pointer;
-        margin: 8px 0;
-        background: #FFD1B5;
-        font-weight: bold;
-        font-size: 14px;
-        line-height: 20px;
-        padding: 4px 16px;
-        border-radius: 4px;
-        text-align: center;
+        border-radius: 40px;
+
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        background: $black;
+        background-clip: padding-box;
+        border: solid 1px transparent;
+        position: relative;
+
+        &:before {
+            content: '';
+            position: absolute;
+            top: 0; right: 0; bottom: 0; left: 0;
+            z-index: -1;
+            margin: -1px;
+            border-radius: inherit;
+            background: linear-gradient(74.43deg, #DBB0FF -12.43%, #C2DCFF 24.51%, #B4FFE0 63.46%, #FEFBDA 82.01%, #FECBFF 110.47%);
+        }
+    }
+
+    #connect-button-wallet-connect {
+        display: none;
     }
 }
