--- a/src/components/Insctructions/Instructions.scss
+++ b/src/components/Insctructions/Instructions.scss
@@ -1,5 +1,39 @@
+@import "../../ui-kit/styles/vars";
+
 .instructions {
-    padding: 30px;
-    max-width: 800px;
-    margin: 0 auto;
+    padding: 24px;
+    max-width: 400px;
+    margin: 0 16px 24px 16px;
+    width: calc(100% - 32px);
+    box-sizing: border-box;
+
+    background: $dark-gray;
+    border-radius: 16px;
+    color: #FFFFFF;
+    position: relative;
+
+    &__title {
+        font-weight: 700;
+        font-size: 18px;
+        line-height: 24px;
+    }
+
+    &__steps {
+        font-weight: 500;
+        font-size: 14px;
+        line-height: 18px;
+        padding-left: 16px;
+        margin: 16px 0 0 0;
+    }
+
+    &__close {
+        cursor: pointer;
+        position: absolute;
+        top: 16px;
+        right: 16px;
+
+        path {
+            fill: $gray1;
+        }
+    }
 }
