--- a/src/components/YoutubeEmbed/YoutubeEmbed.scss
+++ b/src/components/YoutubeEmbed/YoutubeEmbed.scss
@@ -1,5 +1,5 @@
 .video-responsive {
-  margin: 0 auto;
+  margin: 0 auto 24px auto;
   text-align: center;
 
   @media screen and (max-width: 600px) {
