--- a/src/index.scss
+++ b/src/index.scss
@@ -1,8 +1,10 @@
+@import "ui-kit/styles/vars";
+
 body {
     font-family: 'DM Sans', sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    background: #f0f0f0;
+    background: $black;
     padding: 0;
     margin: 0;
 }
