--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -1,3 +1,5 @@
+@import "src/ui-kit/styles/vars";
+
 .footer {
   position: absolute;
   bottom: 0;
@@ -5,9 +7,18 @@
   right: 0;
   width: 100%;
 
-  height: 30px;
+  height: 58px;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 18px;
+  color: $gray2;
 
   &__made-by {
     text-align: center;
+
+    a {
+      color: white;
+      text-decoration: none !important;
+    }
   }
 }
