--- a/src/components/ApproveForm/ApproveForm.scss
+++ b/src/components/ApproveForm/ApproveForm.scss
@@ -1,16 +1,75 @@
+@import "../../ui-kit/styles/vars";
+
 .approve-form {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding-bottom: 70px;
+
+    padding: 32px 24px 40px 24px;
+
+    background: $black;
+    background-clip: padding-box;
+    border: solid 1px transparent;
+    position: relative;
+    border-radius: 24px;
+
+    &--disabled {
+        .approve-form__content {
+            pointer-events: none;
+            cursor: not-allowed;
+        }
+    }
+
+    &:before {
+        content: '';
+        position: absolute;
+        top: 0; right: 0; bottom: 0; left: 0;
+        z-index: -1;
+        margin: -1px;
+        border-radius: inherit;
+        background: linear-gradient(74.43deg, #DBB0FF -12.43%, #C2DCFF 24.51%, #B4FFE0 63.46%, #FEFBDA 82.01%, #FECBFF 110.47%);
+    }
+
+    &__title {
+        font-weight: 500;
+        font-size: 32px;
+        line-height: 42px;
+        padding-bottom: 32px;
+    }
+
+    &__content {
+        text-align: left;
+        max-width: 352px;
+    }
+
+    &__label {
+        color: $gray1;
+    }
 
     & &__network-form,
     & &__token-form,
     & &__address,
     & &__value {
-        width: 400px;
+        width: 352px;
         margin: 20px 0;
+        border: 1px solid #313131;
+        border-radius: 80px;
+
+        & > div {
+            color: $gray1;
+        }
+
+        input {
+            color: $gray1;
+            background-color: $black !important;
+            border-radius: 80px;
+            outline: none;
+        }
+
+        fieldset {
+            display: none;
+        }
 
         @media screen and (max-width: 600px) {
             width: 340px;
@@ -23,8 +82,8 @@
     }
 
     & &__button {
-        width: 250px;
-        height: 50px;
+        width: 320px;
+        height: 58px;
         margin-bottom: 20px;
     }
 
