--- a/src/index.scss
+++ b/src/index.scss
@@ -5,6 +5,7 @@ body {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     background: $black;
+    color: white;
     padding: 0;
     margin: 0;
 }
