--- a/src/components/TransferForm/TransferForm.scss
+++ b/src/components/TransferForm/TransferForm.scss
@@ -1,31 +1,118 @@
+@import "../../ui-kit/styles/vars";
+
 .transfer-form {
     display: flex;
     flex-direction: column;
-    align-items: center;
     justify-content: center;
-    padding-bottom: 70px;
+    align-items: center;
+    width: 100%;
+    max-width: 400px;
 
-    &__title {
-        font-size: 24px;
-    }
+    &__content {
+        background: $black;
+        background-clip: padding-box;
+        border: solid 1px transparent;
+        position: relative;
+        border-radius: 24px;
+        padding: 32px 40px;
+        box-sizing: border-box;
+        width: 100%;
 
-    &__info {
-        max-width: 400px;
-    }
-
-    & &__button {
-        margin-top: 20px;
-        width: 250px;
-        height: 50px;
-        margin-bottom: 20px;
-        font-size: 16px;
-
-        &--main-page {
-            margin-top: 40px;
+        &:before {
+            content: '';
+            position: absolute;
+            top: 0; right: 0; bottom: 0; left: 0;
+            z-index: -1;
+            margin: -1px;
+            border-radius: inherit;
+            background: linear-gradient(74.43deg, #DBB0FF -12.43%, #C2DCFF 24.51%, #B4FFE0 63.46%, #FEFBDA 82.01%, #FECBFF 110.47%);
         }
     }
 
-    & &__hash {
-        padding-top: 10px;
+    &__title {
+        font-weight: 500;
+        font-size: 32px;
+        line-height: 42px;
+        padding-bottom: 32px;
+        text-align: center;
+    }
+
+    &__line {
+        display: flex;
+
+        .info-cell:first-child {
+            margin-right: 24px;
+        }
+    }
+
+    &__copy-container {
+        .info-cell__content {
+            justify-content: space-between;
+        }
+    }
+
+    &__token-address {
+        &__buttons {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .info-cell__content {
+            justify-content: space-between;
+        }
+    }
+
+    &__metamask {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background: white;
+        height: 28px;
+        width: 85px;
+        border-radius: 40px;
+        margin-right: 24px;
+
+        font-weight: 700;
+        font-size: 12px;
+        line-height: 16px;
+        color: $black;
+        cursor: pointer;
+    }
+
+    &__button {
+        width: 100%;
+        height: 50px;
+        margin: 32px auto 0 auto;
+    }
+
+    &__hash {
+        width: 100%;
+        max-width: 350px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+
+        font-weight: 700;
+        font-size: 14px;
+        line-height: 18px;
+        margin: 0 25px;
+        padding: 24px 8px 16px 16px;
+        box-sizing: border-box;
+
+        a {
+            text-decoration-line: underline;
+            cursor: pointer;
+
+            background: linear-gradient(74.43deg, #DBB0FF -12.43%, #C2DCFF 24.51%, #B4FFE0 63.46%, #FEFBDA 82.01%, #FECBFF 110.47%);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            background-clip: text;
+            text-fill-color: transparent;
+        }
+
+        &__text {
+            display: flex;
+        }
     }
 }
