--- a/src/components/ApproveForm/ApproveForm.scss
+++ b/src/components/ApproveForm/ApproveForm.scss
@@ -136,12 +136,6 @@
         padding-top: 5px;
     }
 
-    & &__button {
-        width: 320px;
-        height: 58px;
-        margin-bottom: 20px;
-    }
-
     &__paper {
         background-color: #313131 !important;
         border-radius: 8px !important;
@@ -226,5 +220,28 @@
         background: $dark-gray;
         border-radius: 8px;
         padding: 8px 8px 8px 16px;
+    }
+
+    &__button__wc,
+    &__button__metamask {
+        width: 100%;
+        height: 58px;
+        margin: 32px auto 0 auto;
+    }
+
+    &__button__wc {
+        display: none;
+    }
+    &__button__metamask {
+        display: block;
+    }
+
+    @media screen and (max-width: 600px) {
+        &__button__wc {
+            display: block;
+        }
+        &__button__metamask {
+            display: none;
+        }
     }
 }
