--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -3,7 +3,7 @@
 .footer {
   width: 100%;
 
-  height: 58px;
+  height: 78px;
   font-weight: 400;
   font-size: 14px;
   line-height: 18px;
@@ -15,6 +15,16 @@
     a {
       color: white;
       text-decoration: none !important;
+    }
+  }
+
+  &__social {
+    padding-top: 8px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    a {
+      padding: 0 6px;
     }
   }
 }
