--- a/src/components/Insctructions/Instructions.scss
+++ b/src/components/Insctructions/Instructions.scss
@@ -23,7 +23,7 @@
         font-size: 14px;
         line-height: 18px;
         padding-left: 16px;
-        margin: 16px 0;
+        margin: 16px 0 0 0;
     }
 
     &__close {
@@ -35,19 +35,5 @@
         path {
             fill: $gray1;
         }
-    }
-
-    &__more {
-        font-weight: 700;
-        font-size: 12px;
-        line-height: 16px;
-        text-decoration-line: underline;
-        cursor: pointer;
-
-        background: linear-gradient(74.43deg, #DBB0FF -12.43%, #C2DCFF 24.51%, #B4FFE0 63.46%, #FEFBDA 82.01%, #FECBFF 110.47%);
-        -webkit-background-clip: text;
-        -webkit-text-fill-color: transparent;
-        background-clip: text;
-        text-fill-color: transparent;
     }
 }
