--- a/src/components/ApproveForm/ApproveForm.scss
+++ b/src/components/ApproveForm/ApproveForm.scss
@@ -222,6 +222,7 @@
         padding: 8px 8px 8px 16px;
     }
 
+    &__button,
     &__button__wc,
     &__button__metamask {
         width: 100%;
