--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -19,7 +19,7 @@
   }
 
   &__social {
-    padding-top: 8px;
+    padding: 8px 0;
     display: flex;
     align-items: center;
     justify-content: center;
