feat: add address link

--- a/src/components/TransferForm/TransferForm.scss
+++ b/src/components/TransferForm/TransferForm.scss
@@ -58,6 +58,9 @@
     }
 
     &__token-address {
+        a {
+            color: white;
+        }
         &__buttons {
             display: flex;
             justify-content: center;
