feat: add restore form

--- a/src/components/ApproveForm/ApproveForm.scss
+++ b/src/components/ApproveForm/ApproveForm.scss
@@ -5,6 +5,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    margin-bottom: 42px;
 
     padding: 32px 24px 40px 24px;
 
@@ -235,6 +236,38 @@
     }
     &__button__metamask {
         display: block;
+    }
+
+    &__restore {
+        font-weight: 700;
+        font-size: 18px;
+        line-height: 24px;
+        text-align: center;
+        &__input {
+            width: 352px;
+            margin: 32px 0 0 0;
+            border: 1px solid #313131;
+            border-radius: 80px;
+
+            & > div {
+                color: $gray1;
+            }
+
+            input {
+                color: $gray1;
+                background-color: $black !important;
+                border-radius: 80px;
+                outline: none;
+            }
+
+            fieldset {
+                display: none;
+            }
+
+            @media screen and (max-width: 600px) {
+                width: 340px;
+            }
+        }
     }
 
     @media screen and (max-width: 600px) {
