--- a/src/components/ApproveForm/ApproveForm.scss
+++ b/src/components/ApproveForm/ApproveForm.scss
@@ -221,6 +221,7 @@
         background: $dark-gray;
         border-radius: 8px;
         padding: 8px 8px 8px 16px;
+        margin-bottom: 42px;
     }
 
     &__button,
