--- a/src/components/ApproveForm/ApproveForm.scss
+++ b/src/components/ApproveForm/ApproveForm.scss
@@ -5,7 +5,10 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin-bottom: 42px;
+
+    &:last-child {
+        margin-top: 42px;
+    }
 
     padding: 32px 24px 40px 24px;
 
@@ -221,7 +224,6 @@
         background: $dark-gray;
         border-radius: 8px;
         padding: 8px 8px 8px 16px;
-        margin-bottom: 42px;
     }
 
     &__button,
