--- a/src/components/ApproveForm/ApproveForm.scss
+++ b/src/components/ApproveForm/ApproveForm.scss
@@ -5,9 +5,11 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    margin-bottom: 24px;
 
     &:last-child {
-        margin-top: 42px;
+        margin-top: 24px;
+        margin-bottom: 48px;
     }
 
     padding: 32px 24px 40px 24px;
@@ -217,7 +219,7 @@
     }
 
     &__hash {
-        padding: 24px 8px 16px 16px;
+        padding: 0px 8px 16px 16px;
     }
 
     &__url {
