--- a/src/components/ApproveForm/ApproveForm.scss
+++ b/src/components/ApproveForm/ApproveForm.scss
@@ -6,6 +6,7 @@
     align-items: center;
     justify-content: center;
     margin-bottom: 24px;
+    max-width: 356px;
 
     &:last-child {
         margin-top: 24px;
@@ -272,6 +273,14 @@
             @media screen and (max-width: 600px) {
                 width: 340px;
             }
+        }
+    }
+
+    &__allowance {
+        width: 100%;
+
+        &__text {
+            padding: 0 16px;
         }
     }
 
