--- a/src/components/ApproveForm/ApproveForm.scss
+++ b/src/components/ApproveForm/ApproveForm.scss
@@ -229,19 +229,10 @@
         padding: 8px 8px 8px 16px;
     }
 
-    &__button,
-    &__button__wc,
-    &__button__metamask {
+    &__button  {
         width: 100%;
         height: 58px;
         margin: 32px auto 0 auto;
-    }
-
-    &__button__wc {
-        display: none;
-    }
-    &__button__metamask {
-        display: block;
     }
 
     &__restore {
@@ -281,15 +272,6 @@
 
         &__text {
             padding: 0 16px;
-        }
-    }
-
-    @media screen and (max-width: 600px) {
-        &__button__wc {
-            display: block;
-        }
-        &__button__metamask {
-            display: none;
         }
     }
 }
