--- a/src/index.scss
+++ b/src/index.scss
@@ -4,7 +4,7 @@ body {
     font-family: 'DM Sans', sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    background: $black;
+    background: #F9D549;
     color: white;
     padding: 0;
     margin: 0;
