feat: change colors

--- a/src/components/Insctructions/Instructions.scss
+++ b/src/components/Insctructions/Instructions.scss
@@ -13,6 +13,7 @@
     position: relative;
 
     &__title {
+        color: #F9D549;
         font-weight: 700;
         font-size: 18px;
         line-height: 24px;
