--- a/src/ui-kit/components/Button/button.scss
+++ b/src/ui-kit/components/Button/button.scss
@@ -22,7 +22,7 @@ $border: 1px;
 
   &:hover {
     .button__gradient-text {
-      background: linear-gradient(74.43deg, #DBB0FF -12.43%, #C2DCFF 24.51%, #B4FFE0 63.46%, #FEFBDA 82.01%, #FECBFF 110.47%);
+      background: #F9D549;
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
     }
@@ -33,7 +33,6 @@ $border: 1px;
   }
 
   &__gradient-text {
-    transition: all 200ms;
     color: $black;
   }
 
@@ -44,7 +43,7 @@ $border: 1px;
     z-index: -1;
     margin: -$border;
     border-radius: inherit;
-    background: linear-gradient(74.43deg, #DBB0FF -12.43%, #C2DCFF 24.51%, #B4FFE0 63.46%, #FEFBDA 82.01%, #FECBFF 110.47%);
+    background: #F9D549;
   }
 
   &__content {
@@ -56,7 +55,7 @@ $border: 1px;
 
     width: 100%;
     height: 100%;
-    background: linear-gradient(74.43deg, #DBB0FF -12.43%, #C2DCFF 24.51%, #B4FFE0 63.46%, #FEFBDA 82.01%, #FECBFF 110.47%);
+    background: #F9D549;
     border-radius: 80px;
   }
 
