--- a/src/components/TransferForm/TransferForm.scss
+++ b/src/components/TransferForm/TransferForm.scss
@@ -111,18 +111,14 @@
         box-sizing: border-box;
 
         a {
-            text-decoration-line: underline;
+            text-decoration-line: none;
             cursor: pointer;
-
-            background: linear-gradient(74.43deg, #DBB0FF -12.43%, #C2DCFF 24.51%, #B4FFE0 63.46%, #FEFBDA 82.01%, #FECBFF 110.47%);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-            background-clip: text;
-            text-fill-color: transparent;
+            color: $black;
         }
 
         &__text {
             display: flex;
+            color: $black;
         }
     }
 
