Revert "feat: add yellow bg"
This reverts commit 742465e63d9ce0f38c29c86c4ddd28b20d15b086.

--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -7,14 +7,13 @@
   font-weight: 400;
   font-size: 14px;
   line-height: 18px;
-  color: $dark-gray;
+  color: $gray2;
 
   &__made-by {
     text-align: center;
 
     a {
-      font-weight: 600;
-      color: $black;
+      color: white;
       text-decoration: none !important;
     }
   }
