--- a/src/ui-kit/components/Button/button.scss
+++ b/src/ui-kit/components/Button/button.scss
@@ -22,7 +22,7 @@ $border: 1px;
 
   &:hover {
     .button__gradient-text {
-      background: #F9D549;
+      background: linear-gradient(74.43deg, #DBB0FF -12.43%, #C2DCFF 24.51%, #B4FFE0 63.46%, #FEFBDA 82.01%, #FECBFF 110.47%);
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
     }
@@ -33,6 +33,7 @@ $border: 1px;
   }
 
   &__gradient-text {
+    transition: all 200ms;
     color: $black;
   }
 
@@ -43,7 +44,7 @@ $border: 1px;
     z-index: -1;
     margin: -$border;
     border-radius: inherit;
-    background: #F9D549;
+    background: linear-gradient(74.43deg, #DBB0FF -12.43%, #C2DCFF 24.51%, #B4FFE0 63.46%, #FEFBDA 82.01%, #FECBFF 110.47%);
   }
 
   &__content {
@@ -55,7 +56,7 @@ $border: 1px;
 
     width: 100%;
     height: 100%;
-    background: #F9D549;
+    background: linear-gradient(74.43deg, #DBB0FF -12.43%, #C2DCFF 24.51%, #B4FFE0 63.46%, #FEFBDA 82.01%, #FECBFF 110.47%);
     border-radius: 80px;
   }
 
