feat: add routing + move restore to new component + add info in header

--- a/src/components/ReceiveForm/ReceiveForm.scss
+++ b/src/components/ReceiveForm/ReceiveForm.scss
@@ -1,6 +1,6 @@
 @import "../../ui-kit/styles/vars";
 
-.transfer-form {
+.receive-form {
     display: flex;
     flex-direction: column;
     justify-content: center;
