--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -26,6 +26,13 @@
     &__logo {
         height: 48px;
         width: 48px;
+        margin-right: 8px;
+    }
+
+    &__logo-info {
+        display: flex;
+        align-items: center;
+        justify-content: center;
     }
 
     &__address {
@@ -80,5 +87,26 @@
             border-radius: inherit;
             background: linear-gradient(74.43deg, #DBB0FF -12.43%, #C2DCFF 24.51%, #B4FFE0 63.46%, #FEFBDA 82.01%, #FECBFF 110.47%);
         }
+    }
+
+    &__link {
+        height: 40px;
+        padding: 8px 10px;
+        border-radius: 80px;
+        border: 2px solid transparent;
+        margin-right: 4px;
+        box-sizing: border-box;
+
+        &--selected {
+            border: 2px solid $dark-gray;
+        }
+
+        &:last-child {
+            margin-right: 0;
+        }
+    }
+
+    &__links {
+        margin-right: 40px;
     }
 }
