--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -9,9 +9,11 @@
     justify-content: space-between;
     height: 80px;
     padding: 0 40px;
-    z-index: 1;
+    z-index: 10;
     top: 0;
     left: 0;
+    background: $black;
+    box-shadow: 0 6px 12px 6px rgba(32,32,29,1);
 
     @media screen and (max-width: 600px) {
         height: 68px;
