--- a/src/components/SendForm/SendForm.scss
+++ b/src/components/SendForm/SendForm.scss
@@ -20,6 +20,18 @@
     position: relative;
     border-radius: 24px;
 
+    &__twitter {
+        width: 100%;
+
+        &__header {
+            text-align: center;
+            font-size: 20px;
+            line-height: 24px;
+            font-weight: 500;
+            padding-bottom: 12px;
+        }
+    }
+
     &--disabled {
         .approve-form__content {
             pointer-events: none;
