--- a/src/components/SendForm/SendForm.scss
+++ b/src/components/SendForm/SendForm.scss
@@ -24,10 +24,23 @@
         width: 100%;
 
         &__header {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            padding-bottom: 12px;
+        }
+
+        &__title {
             text-align: center;
             font-size: 20px;
             line-height: 24px;
             font-weight: 500;
+            padding-right: 10px;
+            padding-bottom: 6px;
+        }
+
+        div {
+            text-align: center;
         }
     }
 
