--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -23,6 +23,11 @@
             height: 40px;
             width: 40px;
         }
+
+        &__link {
+            padding: 6px 6px;
+            margin-right: 2px;
+        }
     }
 
     &__logo {
