--- a/src/components/TwitterPosts/styles.scss
+++ b/src/components/TwitterPosts/styles.scss
@@ -51,6 +51,6 @@
   padding: 20px 10px;
   border-radius: 10px;
   background: $black;
-  box-shadow: 0 0 10px 5px rgb(32 32 29 / 80%);
+  box-shadow: 0 0 10px 5px rgba(32,32,29,0.8);
   color: $gradient-fallback;
 }
