--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -7,17 +7,17 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    height: 80px;
+    height: 70px;
     padding: 0 40px;
     z-index: 10;
     top: 0;
     left: 0;
-    background: $black;
-    box-shadow: 0 6px 12px 6px rgba(32,32,29,1);
 
     @media screen and (max-width: 600px) {
         height: 68px;
         padding: 0 16px;
+        background: $black;
+        box-shadow: 0 6px 12px 6px rgba(32,32,29,1);
 
         &__logo {
             height: 40px;
@@ -28,6 +28,11 @@
             padding: 6px 6px;
             margin-right: 2px;
         }
+    }
+
+    &__transferred {
+        font-size: 20px;
+        font-weight: 600;
     }
 
     &__logo {
