--- a/src/components/RestoreForm/RestoreForm.scss
+++ b/src/components/RestoreForm/RestoreForm.scss
@@ -1,6 +1,19 @@
 @import "../../ui-kit/styles/vars";
 
 .restore-form {
+    &__disclaimer {
+        width: 570px;
+        font-size: 16px;
+        line-height: 24px;
+        text-align: center;
+
+        @media screen and (max-width: 600px) {
+            font-size: 14px;
+            padding: 6px 6px;
+            box-sizing: border-box;
+            width: 100%;
+        }
+    }
     &__url {
         background: $dark-gray;
         border-radius: 8px;
