--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -83,3 +83,20 @@
         }
     }
 }
+
+.bug-icon {
+    position: absolute;
+    z-index: 10;
+    bottom: 80px;
+    right: 80px;
+    width: 50px;
+    height: 50px;
+    cursor: pointer;
+
+    @media (max-width: $mobile-width) {
+        bottom: 30px;
+        right: 30px;
+        width: 40px;
+        height: 40px;
+    }
+}
