--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -85,10 +85,10 @@
 }
 
 .bug-icon {
-    position: absolute;
+    position: fixed;
     z-index: 10;
-    bottom: 80px;
-    right: 80px;
+    bottom: 60px;
+    right: 60px;
     width: 50px;
     height: 50px;
     cursor: pointer;
