--- a/src/components/SendForm/SendForm.scss
+++ b/src/components/SendForm/SendForm.scss
@@ -150,6 +150,10 @@
         white-space: nowrap;
     }
 
+    &__token-form__loader {
+        margin: 6px 16px 12px 16px;
+    }
+
     & &__token-form {
         .MuiSelect-select {
             padding: 18px 50px 16px 16px !important;
