--- a/src/components/ReceiveForm/ReceiveForm.scss
+++ b/src/components/ReceiveForm/ReceiveForm.scss
@@ -7,6 +7,7 @@
     align-items: center;
     width: 100%;
     max-width: 400px;
+    margin-bottom: 25px;
 
     &--disabled {
         .info-cell__content {
