--- a/src/components/SendForm/SendForm.scss
+++ b/src/components/SendForm/SendForm.scss
@@ -126,6 +126,11 @@
         white-space: nowrap;
     }
 
+    &__token-form__logo {
+        width: 20px;
+        height: 20px;
+    }
+
     &__token-form__loader {
         margin: 6px 16px 12px 16px;
     }
