--- a/src/components/RestoreForm/RestoreForm.scss
+++ b/src/components/RestoreForm/RestoreForm.scss
@@ -26,7 +26,7 @@
         font-weight: 700;
         font-size: 14px;
         line-height: 18px;
-        margin: 0 25px;
+        margin: 15px 0 0 0;
 
         a {
             text-decoration-line: underline;
