--- a/src/components/SendForm/SendForm.scss
+++ b/src/components/SendForm/SendForm.scss
@@ -283,6 +283,35 @@
         }
     }
 
+    &__modal {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        width: 400px;
+        padding: 32px 28px 14px 28px;
+        background: $dark-gray;
+        border-radius: 4px;
+
+        &__title {
+            text-align: center;
+        }
+
+        .gen-url {
+            margin: 0;
+        }
+
+        &__close {
+            background: white;
+            border-radius: 20px;
+            position: absolute;
+            top: 8px;
+            right: 8px;
+            cursor: pointer;
+            padding: 3px;
+        }
+    }
+
     @media screen and (max-width: 600px) {
         width: 330px;
     }
