fix: paddings and length of genUrl

--- a/src/components/GenUrlPopup/styles.scss
+++ b/src/components/GenUrlPopup/styles.scss
@@ -6,12 +6,13 @@
   left: 50%;
   transform: translate(-50%, -50%);
   width: 400px;
-  padding: 32px 28px 14px 28px;
+  padding: 30px 28px 14px 28px;
   background: $dark-gray;
   border-radius: 4px;
 
   &__title {
     text-align: center;
+    padding-bottom: 5px;
   }
 
   .gen-url {
@@ -25,6 +26,6 @@
     top: 8px;
     right: 8px;
     cursor: pointer;
-    padding: 3px;
+    padding: 2px;
   }
 }
