--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -19,12 +19,35 @@
     }
 }
 
-.web3modal {
-    &-modal-card {
+.connect-modal {
+    transition: opacity 0.1s ease-in-out 0s;
+    text-align: center;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    margin-left: -50vw;
+    top: 0;
+    left: 50%;
+    z-index: 2;
+    will-change: opacity;
+    background-color: rgba(0, 0, 0, 0.4);
+    opacity: 1;
+    pointer-events: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    &__card {
         display: flex !important;
         width: 350px !important;
         flex-direction: column !important;
         padding: 32px 40px !important;
+
+        background-color: rgb(49, 49, 49);
+        border-radius: 12px;
+        margin: 10px;
+        box-sizing: border-box;
+        z-index: 5;
 
         &:before {
             content: 'Connect a wallet';
@@ -34,8 +57,9 @@
         }
     }
 
-    &-provider {
+    &__provider {
         &-wrapper {
+            cursor: pointer;
             padding: 0 0 8px 0 !important;
 
             &:first-child {
@@ -57,7 +81,7 @@
             position: relative !important;
 
             &:hover {
-                background-color: rgba(32, 32, 29, 0.5) !important;
+                background-color: rgba(32, 32, 29, 0.8) !important;
             }
 
             &:after {
@@ -76,11 +100,17 @@
             line-height: 18px !important;
             text-align: left;
             padding-left: 12px;
-            margin-top: 4px !important;
         }
-        &-description {
-            display: none;
-        }
+    }
+
+    &__fade {
+        position: fixed;
+        left: 0;
+        top: 0;
+        width: 100vw;
+        height: 100vh;
+        background: rgba(0,0,0, 0.7);
+        z-index: 4;
     }
 }
 
