--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -90,6 +90,17 @@
                 top: 16px;
                 right: 16px;
             }
+
+            &--disabled {
+                cursor: none;
+                pointer-events: none;
+                background: $dark !important;
+                opacity: 0.7;
+
+                &:after {
+                    content: none;
+                }
+            }
         }
         &-icon {
             width: 28px !important;
