--- a/src/components/GenUrl/styles.scss
+++ b/src/components/GenUrl/styles.scss
@@ -34,6 +34,10 @@
             @media screen and (max-width: 600px) {
                 width: 110px;
             }
+
+            @media screen and (max-width: 500px) {
+                display: none;
+            }
         }
     }
 
