--- a/src/components/GenUrlPopup/styles.scss
+++ b/src/components/GenUrlPopup/styles.scss
@@ -28,4 +28,9 @@
     cursor: pointer;
     padding: 2px;
   }
+
+  @media screen and (max-width: 500px) {
+    width: 300px;
+    padding: 30px 15px 10px;
+  }
 }
