--- a/src/components/Header/supportComponents/HeaderInfo/styles.scss
+++ b/src/components/Header/supportComponents/HeaderInfo/styles.scss
@@ -6,6 +6,7 @@
     height: 48px;
     width: 48px;
     margin-right: 8px;
+    margin-top: 4px;
 
     @media screen and (max-width: 600px) {
       height: 40px;
