feat: add Celo support

--- a/src/components/SendForm/SendForm.scss
+++ b/src/components/SendForm/SendForm.scss
@@ -58,7 +58,8 @@
             align-items: center;
 
             img {
-                padding-right: 8px;
+                margin-right: 8px;
+                border-radius: 6px;
             }
         }
 
