feat: add custom token in request page

--- a/src/components/RequestForm/supportComponents/TokenAddress/styles.scss
+++ b/src/components/RequestForm/supportComponents/TokenAddress/styles.scss
@@ -1,6 +1,12 @@
 @import "../../../../ui-kit/styles/vars";
 
 .token-address {
+  &__content {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+
   &__input {
     display: flex;
     align-items: center;
